[gd_scene load_steps=9 format=2]

[ext_resource path="res://Mushroom/Mushroom.gd" type="Script" id=1]
[ext_resource path="res://Mushroom/mushroom2.png" type="Texture" id=2]
[ext_resource path="res://Mushroom/mushroom.png" type="Texture" id=3]
[ext_resource path="res://Mushroom/States/Stagger.gd" type="Script" id=4]
[ext_resource path="res://Mushroom/States/Walk.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stagger",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=2]

resource_name = "Stagger"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Stagger" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Walk"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 0 ]
}

[node name="Mushroom" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="." index="1"]

position = Vector2( -0.56764, 7.79328 )
scale = Vector2( 2.31566, 1.414 )
build_mode = 0
polygon = PoolVector2Array( 6.61387, 9.92177, -5.67228, 9.96104, -8.45578, 5.57142, -10.2084, 0.506495, -10.2084, -7.42857, -8.91025, -9.04904, -5.87319, -17.2891, -2.44183, -20.307, 2.92025, -20.3103, 6.33732, -17.426, 9.38535, -9.00472, 10.5132, -7.42857, 10.5132, 0.675324, 9.06995, 5.23377 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Energy" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DamageSpot" type="Position2D" parent="." index="3"]

position = Vector2( 0, -23 )
_sections_unfolded = [ "Transform" ]

[node name="Pivot" type="Position2D" parent="." index="4"]

[node name="Body" type="AnimatedSprite" parent="Pivot" index="0"]

frames = SubResource( 1 )
animation = "Walk"

[node name="Animation" type="AnimationPlayer" parent="Pivot" index="1"]

root_node = NodePath("")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Stagger = SubResource( 2 )
anims/Walk = SubResource( 3 )
blend_times = [  ]

[node name="States" type="Node" parent="." index="5"]

[node name="Stagger" type="Node" parent="States" index="0"]

script = ExtResource( 4 )

[node name="Walk" type="Node" parent="States" index="1"]

script = ExtResource( 5 )

[node name="RayCastRightDown" type="RayCast2D" parent="." index="6"]

position = Vector2( 30, 2 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 25 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCastLeftDown" type="RayCast2D" parent="." index="7"]

position = Vector2( -30, 2 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 25 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCastRight" type="RayCast2D" parent="." index="8"]

position = Vector2( 19, 5 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 5 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCastLeft" type="RayCast2D" parent="." index="9"]

position = Vector2( -20, 5 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 5 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="animation_finished" from="Pivot/Animation" to="." method="_on_Animation_animation_finished"]


